# opam-package-template

./: CHANGELOG.md  CHANGES.md  README.md  example.sh  my-package.opam  spin
.github/workflows/: ci.yml  main.yml
example/: .ocamlformat  LICENSE  Makefile  README.md  dune-project  example-dev.opam  example-tests.opam  example.opam  example.opam.template
example/.github/workflows/: ci.yml  deploy-odoc.yml  main.yml
example/lib/example/src/: dune  example.ml  example.mli
example/lib/example/test/: dune  test__example.ml
example/src/: dune  example.ml
example/test/: dune  test__hello.ml
script/: find-and-replace.sh
template/: CHANGELOG.md  LICENSE  Makefile  README.md  dune-project  {{ project_slug }}-dev.opam  {{ project_slug }}-tests.opam  {{ project_slug }}.opam
template/github/workflows/: ci.yml  deploy-odoc.yml  main.yml
template/lib/{{ project_snake }}/src/: dune  {{ project_snake  }}.ml  {{ project_snake  }}.mli
template/lib/{{ project_snake }}/test/: dune  test__{{ project_snake }}.ml
template/src/: dune  hello.mli
template/test/: dune  test__{{ project_slug }}.ml
test/: test__hello.ml
