opam-version: "2.0"
maintainer: "Mathieu Barbin"
authors: ["Mathieu Barbin"]
homepage: "https://github.com/mbarbin/my-package"
bug-reports: "https://github.com/mbarbin/my-package/issues"
dev-repo: "git+https://github.com/mbarbin/my-package.git"
doc: "https://github.com/mbarbin/my-package"
license: "MIT"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.09.0"}
  "base"
  "core" {with-test}
  "dune" {>= "2.0.0"}
  "ppx_jane" {with-test}
  "ppx_sexp_value"
]
synopsis: "Add a short synopsis for my package"
description: """
Add a longer description.
With more details.
"""
