opam-version: "2.0"
synopsis: "A short, but powerful statement about your project"
description: "A short, but powerful statement about your project"
maintainer: "Mathieu Barbin"
authors: "Mathieu Barbin"
license: "MIT"
homepage: "https://github.com/mbarbin/example"
doc: "https://github.com/mbarbin/example"
bug-reports: "https://github.com/mbarbin/example/issues"
depends: [
  "ocaml" {>= "4.09.0"}
  "dune" {>= "2.0.0"}
  "base" {>= "v0.15~preview.126.09+236"}
  "core" {>= "v0.15~preview.126.09+236"}
  "ppx_jane" {>= "v0.15~preview.126.09+236" & with-test}
  "ppx_sexp_value" {>= "v0.15~preview.126.09+236"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mbarbin/example.git"
