(lang dune 3.16)

(name {{ project_slug }})

(generate_opam_files)

(license MIT)

(authors "{{ author_name }}")

(maintainers "{{ author_name }}")

(source
 (github {{ github_username }}/{{ project_slug }}))

(documentation "https://{{ github_username }}.github.io/{{ project_slug }}/")

(package
 (name {{ project_slug }})
 (synopsis "{{ project_description }}")
 (depends
  (ocaml
   (>= 5.2))
  (base
   (and
    (>= v0.17)
    (< v0.18)))
  (cmdlang
   (>= 0.0.5))
  (cmdlang-cmdliner-runner
   (>= 0.0.5))
  (cmdlang-to-cmdliner
   (>= 0.0.5))
  (cmdliner
   (= 1.3.0))
  (err
   (>= 0.0.5))
  (ppx_compare
   (and
    (>= v0.17)
    (< v0.18)))
  (ppx_enumerate
   (and
    (>= v0.17)
    (< v0.18)))
  (ppx_hash
   (and
    (>= v0.17)
    (< v0.18)))
  (ppx_here
   (and
    (>= v0.17)
    (< v0.18)))
  (ppx_let
   (and
    (>= v0.17)
    (< v0.18)))
  (ppx_sexp_conv
   (and
    (>= v0.17)
    (< v0.18)))
  (ppx_sexp_value
   (and
    (>= v0.17)
    (< v0.18)))
  (ppxlib
   (>= 0.33))
  (stdio
   (and
    (>= v0.17)
    (< v0.18)))))

(package
 (name {{ project_slug }}-tests)
 (synopsis "Tests for {{ project_slug }}")
 (depends
  (ocaml
   (>= 5.2))
  (ocamlformat
   (and
    :with-dev-setup
    (= 0.26.2)))
  (base
   (and
    (>= v0.17)
    (< v0.18)))
  (cmdlang
   (>= 0.0.5))
  (cmdlang-cmdliner-runner
   (>= 0.0.5))
  (cmdlang-to-cmdliner
   (>= 0.0.5))
  (cmdliner
   (= 1.3.0))
  (err
   (>= 0.0.5))
  (expect_test_helpers_core
   (and
    (>= v0.17)
    (< v0.18)))
  (ppx_compare
   (and
    (>= v0.17)
    (< v0.18)))
  (ppx_enumerate
   (and
    (>= v0.17)
    (< v0.18)))
  (ppx_expect
   (and
    (>= v0.17)
    (< v0.18)))
  (ppx_hash
   (and
    (>= v0.17)
    (< v0.18)))
  (ppx_here
   (and
    (>= v0.17)
    (< v0.18)))
  (ppx_js_style
   (and
    :with-dev-setup
    (>= v0.17)
    (< v0.18)))
  (ppx_let
   (and
    (>= v0.17)
    (< v0.18)))
  (ppx_sexp_conv
   (and
    (>= v0.17)
    (< v0.18)))
  (ppx_sexp_value
   (and
    (>= v0.17)
    (< v0.18)))
  (ppxlib
   (>= 0.33))
  (stdio
   (and
    (>= v0.17)
    (< v0.18)))
  (sherlodoc
   (and
    :with-doc
    (>= 0.2)))))
