opam-version: "2.0"
synopsis: "{{ project_description }}"
description: "{{ project_description }}"
maintainer: "{{ author_name }}"
authors: "{{ author_name }}"
license: "MIT"
homepage: "https://github.com/{{ github_username }}/{{ project_slug }}"
doc: "https://github.com/{{ github_username }}/{{ project_slug }}"
bug-reports: "https://github.com/{{ github_username }}/{{ project_slug }}/issues"
depends: [
  "ocaml" {>= "4.09.0"}
  "base" {>= "v0.15~preview.125.13+424"}
  "core_kernel" {>= "v0.15~preview.125.13+424"}
  "dune" {>= "2.0.0"}
  "ppx_jane" {>= "v0.15~preview.125.13+424" & with-test}
  "ppx_sexp_value" {>= "v0.15~preview.125.13+424"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/{{ github_username }}/{{ project_slug }}.git"
