opam-version: "2.0"
synopsis: "{{ project_description }}"
description: "{{ project_description }}"
maintainer: "{{ author_name }}"
authors: "{{ author_name }}"
license: "MIT"
homepage: "https://github.com/{{ github_username }}/{{ project_slug }}"
doc: "https://github.com/{{ github_username }}/{{ project_slug }}"
bug-reports: "https://github.com/{{ github_username }}/{{ project_slug }}/issues"
depends: [
  "ocaml" {>= "5.1"}
  "dune" {>= "3.11"}
  "core" {>= "v0.16" & < "v0.17"}
  "core_unix" {>= "v0.16" & < "v0.17"}
  "ppx_jane" {>= "v0.16" & < "v0.17"}
  "ppx_js_style" {>= "v0.16" & < "v0.17"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/{{ github_username }}/{{ project_slug }}.git"
